# dcp

./: .classpath  .project  README.md
java/src/dcp/: CollatzBinaryInvestigation.java  CollatzTree.java  LargestNonAdjacentSum.java  ProductArray.java
java/src/dcp/hackerrank/: PracticeProblem1.java
java/src/dcp/puzzle8/: Edge.java  Puzzle8Graph.java
python/: .flake8  .gitignore  README.md  pyproject.toml  pytest.ini  requirements-dev.txt  requirements.txt  setup.py
python/puzzle-8/: README.md  __main__.py  cli.py  gui.py  models.py  operations.py  requirements.txt  solver.py
python/reverse-polish/: reverse_polish.py  test_reverse_polish.py
python/reverse_polish/: __init__.py  evaluator.py
python/tests/: __init__.py  test_evaluator.py
src/dailycodingproblem/: CoinFlips.java  CollatzBinaryInvestigation.java  CollatzTree.java  DCPUtils.java  LargestNonAdjacentSum.java  NumberLineJumps.java  ProductArray.java  ReverseCollatz.java
src/dailycodingproblem/hackerrank/: PracticeProblem1.java
src/dailycodingproblem/puzzle8/: Edge.java  Move.java  Puzzle8.java  Puzzle8Graph.java  Puzzle8GraphSearch.java  Puzzle8Move.java  Tile.java  TileDelta.java
src/dailycodingproblem/puzzle8/minheap/: MinHeap.java  (+1 more)
src/dcp/: BipartitePartition.java  CoinFlips.java  DCPUtils.java  LargestNonAdjacentSum.java  MostEvenPartition.java  NumberLineJumps.java  Pig.java  ProductArray.java  ReverseCollatz.java  StaircaseStepsProblem.java
src/dcp/puzzle8/: Puzzle8.java  Puzzle8GraphSearch.java  Puzzle8Move.java  Tile.java  TileDelta.java
test/dcp/: BipartitePartitionTest.java
(+2 files in other folders)
